# localtranslation

./: .gitignore  README.md  claude.md
backend/: .env.example  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
backend/app/: main.py
backend/app/api/v1/: transcription.py
backend/app/core/: config.py  errors.py  logging.py
backend/app/models/: transcription.py
backend/app/schemas/: job.py
backend/app/services/: diarization.py  job_manager.py  transcription.py
backend/app/utils/: audio.py  file_handler.py
backend/models/: README.md
backend/scripts/: download_models.py  setup_db.py
frontend/: .env.example  README.md  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  vite-env.d.ts
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/icons/: icon.icns
frontend/src/components/: FileUploader.tsx  TranscriptionView.tsx
frontend/src/services/: api.ts  transcription.ts
frontend/src/stores/: transcription.ts
frontend/src/styles/: globals.css
frontend/src/types/: api.ts
scripts/: restart.sh  setup.sh  start.sh
